# file-toolkit

./: .gitignore  Cargo.toml  README.md
docs/: CONTRIBUTING.md
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs
src-tauri/src/common/: dependency.rs  mod.rs
